// **********************************************************
// File: InformationsEnum.cs
// Autor: Alexander Denner, Leopold Bialek, Jonas Hammer
// erstellt am: 16.05.2023
// Projekt: quakrypto
// ********************************************************** 

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace quaKrypto.Models.Enums
{
    public enum InformationsEnum
    {
		zahl,
		bitfolge,
		photonen,
		polarisationsschemata,
		unscharfePhotonen,
		asciiText,
		verschluesselterText
	}
}
