using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace quaKrypto.ViewModels
{
    internal class LobbyErstellenViewModel : BaseViewModel
    {
    }
}
